[package]
name = "zmq-sys"
version = "0.13.0"
authors = [
    "a.rottmann@gmx.at",
    "erick.tryzelaar@gmail.com",
]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the zeromq library"
keywords = ["ffi", "bindings"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/erickt/rust-zmq"
build = "build/main.rs"
links = "zmq"

[features]

[dependencies]
libc = "0.2.15"

[build-dependencies]
system-deps = "6"
zeromq-src = { git = "ssh://git@github.com/vibe-ad/zeromq-src-rs", branch = "ts/feat/vibe" }

[package.metadata.system-deps]
libzmq = "4.3.5"
